// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LeadSpace Default buttons 1`] = `
Array [
  <div
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div
      className="storybook-readme-story"
    >
      <div
        style={Object {}}
      >
        <div>
          <div
            className="bx--leadspace__row"
          >
            <div
              className="bx--leadspace__ctas"
            >
              <button
                className="bx--btn bx--btn--primary"
                data-autoid="dds--leadspace__cta-0"
                disabled={false}
                tabIndex={0}
                type="button"
              >
                Primary action action
                <svg
                  aria-hidden={true}
                  className="bx--btn__icon"
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24.59 16.59L17 24.17V2h-2v22.17l-7.59-7.58L6 18l10 10 10-10-1.41-1.41z"
                  />
                </svg>
              </button>
              <button
                className="bx--btn bx--btn--tertiary"
                data-autoid="dds--leadspace__cta-1"
                disabled={false}
                tabIndex={0}
                type="button"
              >
                Secondary action
                <svg
                  aria-hidden={true}
                  className="bx--btn__icon"
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 20 20"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.8 2.8l-1 1 5.4 5.5H1v1.4h15.2l-5.4 5.5 1 1L19 10z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;

exports[`Storyshots LeadSpace Default with image 1`] = `
Array [
  <div
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div
      className="storybook-readme-story"
    >
      <div
        style={Object {}}
      >
        <div>
          <div
            className="bx--leadspace--g100"
          />
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;

exports[`Storyshots LeadSpace Default with no image 1`] = `
Array [
  <div
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div
      className="storybook-readme-story"
    >
      <div
        style={Object {}}
      >
        <div>
          <div
            className="bx--leadspace--g100"
          />
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;
